syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.mingle";
option java_outer_classname = "UserProto";

package authentication;

service UserGrpc {
  rpc login (CredentialsDto) returns (MingleUserDto) {}

  rpc create(MingleUserDto) returns (SuccessMsg){}
}

message CredentialsDto {
  string email = 1;
  string password = 2;
}

message MingleUserDto {
  int64 id = 1;
  bytes image=2;
  string bio=3;
  string firstname=4;
  string lastname=5;
  string username=6;
  string zip=7;
  string email=8;
  string password = 9;
  string phone=10;
  string relationship=11;
  string gender=12;
  string sportType=13;
  string skill=14;
  string birthday=15;
}


// loginMsg message for login
message SuccessMsg {
  string message = 1; // loginMsg message (e.g., "Login successful!")
}
